--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.21)
 project(Cmake)
-#C++测试出来的库文件cgo调用不了,且源文件后缀名要为.c
-#set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_C_STANDARD 99)
+#C++测试出来的库文件cgo调用不了,且源文件后缀名要为.c  c++需要与extern "C" 结合使用
+set(CMAKE_CXX_STANDARD 14)
+#set(CMAKE_C_STANDARD 99)
 
 set(SOURCE_FILES src/library.c)
 
